﻿[B]Changelog[/B]
Fixed: NPO 3 had voice-over subs (See #831)

[I]Previous Changes[/I]
Fixed: Cleaned up NPO (See #831)
Fixed: NPO loginFixed: NPO live streams (See #831)
Fixed: NPO changed their API (Fixes #831)
Fixed: NPO moved the subtitle (TT888) urls
Fixed: Some live channels were missing (Fixes #804)
Fixed: NPO "Titles with '..'" listings (Fixes #801)
Added: NTR School.tv (Fixes #671)
Fixed: NPO Radio streams
Fixed: NPO update broke paging (Fixes #756)
Fixed: Live TV channels and some video items for NPO did not show (Fixes #756)
Fixed: Most of the NPO TV Live streams were missing (Fixes #704)
Fixed: NPO Radio channels
Fixed: NPO changed their URL scheme which broke parsing (Fixed #654)
Fixed: Some NPO listings were empty due to site changes (Fixes #647)
Fixed: Very old streams would not play (Fixes #648)
Added: more NPO Radio web cam streams (Fixes #643)
Added: Genres to NPO.nl channel (Fixes #388)
Fixed: NPO updated their video back-end which broke playback (Fixes #634)
Fixed: NPO date items did not work (Fixed #623)
Fixed: NPO.nl changed their site which broke the alphabetical listing (Fixes #612)
Fixed: NPO broke due to site changes (Fixes #605)
Fixed: 3FM web cam stream disappeared from the listing due to a previous fix (Fixes #594)
Added: "Current" and "Next" to the NPO Live channels (Fixes #583) and don't cache the Live TV Url for now